# Cogniva

./: .env.example  .gitignore  Channels Feature.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vercel.json
client/: package.json
client/src/: App.css
client/src/pages/: home.tsx  login.tsx
client/src/utils/: firebaseClient.ts
docs/: ARCHITECTURE.md
sandbox/: chatbot.py
src/: index.ts
src/agent/: bot_response_flow.ts  index.ts  tools.ts
src/data/: data.csv
src/functions/: scrapDaraz.ts  scrapUrl.ts  search.ts
src/functions/browser/: chromium-min.ts  puppeteer.ts
src/middlewares/: auth.middleware.ts
src/routes/: agent.ts  chat.ts  content.ts  corpus.ts  knowledgebase.ts  notes.ts  verifyAnswer.ts  webSearch.ts
src/routes/chat/: get.py
src/schemas/: responseSchemas.ts
src/types/: agent.ts
src/utils/: documentParser.ts  firebase.ts  neon.ts  noteSearch.ts  ollama.ts  ollamaEnhanced.ts  tavily.ts  vercelCloud.ts
src/utils/sentence_transformer_utils/: main.py
