[project]
name = "inferancia-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.31",
    "langgraph>=0.6.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "supabase>=2.24.0",
]

[tool.pip]
find-links = ["./wheels"]
